# gophersignal

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  debug-docker-compose.yml  docker-compose-dev.yml  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  production.conf
.github/: dependabot.yml  pull_request_template.md
archive/: mysql_shell_session_inside_docker_container.txt  note_on_db_schema.txt  post_request_curl.txt
backend/: Dockerfile  Dockerfile.dev  Makefile  README.md  backup_nginx_config.md  docker-compose.yml  go.mod  go.sum  init-db.sql  main.go  new-nginx-config.txt  reminder_to_start_docker.txt  reminder_to_start_main.txt  reminders.txt  schema.sql  start-gophersignal.sh  todo.md
frontend/: .gitignore  Dockerfile  Dockerfile.ci  Dockerfile.dev  Makefile  README.md  babel.config.js  cypress.config.ts  cypress.json  how_to_update_prod.txt  jest.config.cjs  jest.config.js  next.config.js  nginx.conf  package-lock.json  package.json  tsconfig.json
hackernews_scraper/: .env.example  .nycrc  Dockerfile  Dockerfile.dev  Makefile  README.md  jest.config.ts  package-lock.json  package.json
nginx/: Dockerfile.dev  default.conf  (+4 more)
rss/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  published_articles.txt
rss/src/: config.rs  lib.rs  main.rs
rss/src/config/: config.rs
rss/src/db/: db.rs
rss/src/errors/: errors.rs
rss/src/models/: api_response.rs  article.rs  mod.rs
rss/src/routes/: rss.rs
rss/src/services/: articles.rs  fetch_articles.rs  mod.rs
(+134 files in other folders)
