[package]
name = "gophersignal-rss"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
axum = "0.6"
reqwest = { version = "0.11", features = ["json"] }
rss = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = "0.14" 
chrono = "0.4"
async-trait = "0.1"
serial_test = "2.0"

[[bin]]
name = "rss"
path = "src/main.rs" 
