[package]
name = "gophersignal-rss"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
rss = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
async-trait = "0.1"
serial_test = "3.2"
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-native-tls", "macros", "chrono"] }
thiserror = "2.0"
sha2 = "0.10"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "rss"
path = "src/main.rs" 
